--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ text-shadow: grey;
 }
 .img2{
     float: left;
-    width: 600px;
+    width: 50%;
     height: 400px;
     padding: 40px;
     border-radius: 150px;
@@ -51,7 +51,7 @@ text-shadow: grey;
 }
 .img3{
     float: right;
-    width: 450px;
+    width: 50%;
     height: 500px;
     padding: 40px;
     border-radius: 150px;
