--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+body{
+    background-color: gray;
+}
+.header{
+    background-color: silver;
+}
 .name{
 display: flex;
 flex-wrap: wrap;
@@ -13,20 +19,18 @@ font-weight: 100px;
 }
 .img{
     float: right;
-    width: 300px;
-    height: 350px;
+    width: 350px;
+    height: 400px;
     flex-wrap: wrap;
-    padding: 50px;
+    padding: 60px;
     border-radius: 200px;
 }
-.write-up{
+.maindiv{
     font-size: 30px;
-    padding: 50px;
+    padding: 60px;
     flex-wrap: wrap;
     text-shadow: grey;
     line-height: 60px;
-}
-body{
     background-color: gray;
 }
 .att{
@@ -59,6 +63,7 @@ text-shadow: grey;
 }
 .footer{
     clear: both;
+    background-color: silver;
 }
 
 @media (max-width: 600px) {
